# credit-card-fraud-detection

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: fraud_transactions.json  non_fraud_transactions.json
metrics/: metrics.json
models/: scaler.pkl  xgboost_model.pkl
src/: api.py  train.py
src/services/: fraudDetection.py  loadModel.py  requestManager.py
src/types/: transaction.py
tests/: conftest.py  test_api.py  test_model_exists.py  test_performance.py  test_train.py
