[tool.poetry]
name = "fraud-detector"
version = "0.1.0"
description = "Fraud detection ML project"
authors = ["Matheus Costa <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
joblib = "^1.4.2"
xgboost = "^3.0.5"
matplotlib = "^3.10.6"
shap = "^0.48.0"
seaborn = "^0.13.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
psutil = "^5.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
